# giveMemory.ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.ts  main.py  package.json  pyproject.toml  requirements.txt
src/contextmemory/: __init__.py
src/contextmemory/core/: settings.py
src/contextmemory/db/: database.py
src/contextmemory/db/models/: __init__.py  conversation.py  conversation_summary.py
src/contextmemory/memory/: bubble_creator.py  connection_finder.py  extractor.py  memory.py  similar_memory_search.py
src/contextmemory/memory/add/: add_extraction_phase.py
src/contextmemory/utils/: summary_generator_prompt.py
src/givememory/core/: openai_client.py
src/givememory/db/models/: memory.py  message.py
src/givememory/memory/: embeddings.py  similarity.py  tool_classifier.py  vector_store.py
src/givememory/memory/add/: add_updation_phase.py
src/givememory/summary/: summary_generator.py
src/givememory/utils/: extraction_system_prompt.py  tool_call_system_prompt.py
