[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextmemory"
version = "0.2.0"
description = "Long-term memory system for AI conversations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Samiksha Shukla", email = "samikshasy2908@gmail.com"}
]
keywords = [
    "ai",
    "memory",
    "llm",
    "openai",
    "context",
    "conversation",
    "long-term-memory",
    "mem0",
    "supermemory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/samiksha0shukla/context-memory"
Repository = "https://github.com/samiksha0shukla/context-memory"
Issues = "https://github.com/samiksha0shukla/context-memory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contextmemory = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
